# gradio_image_annotator

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/gradio_image_annotation/: image_annotator.py
backend/gradio_image_annotation/templates/component/: index.js  style.css
backend/gradio_image_annotation/templates/example/: index.js  style.css
backend/gradio_image_annotation_redaction/: image_annotator.py
demo/: app.py  space.py
frontend/: Index.svelte  gradio.config.js  package-lock.json  package.json  tsconfig.json
frontend/shared/: AnnotatedImageData.ts  Box.ts  Canvas.svelte  ImageAnnotator.svelte  ImageCanvas.svelte  ModalBox.svelte  WindowViewer.ts
frontend/shared/patched_dropdown/shared/: DropdownOptions.svelte  Multiselect.svelte
