[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_image_annotation_redaction"
version = "0.5.5"
description = "A Gradio component that can be used to annotate images with bounding boxes. Adapted for use with Document Redaction app. Forked from original work by edgarGarcia and icyray."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Sean Pedrick-Case" }]
keywords = ["gradio-custom-component", "gradio-template-Image", "bounding box", "annotator", "annotate", "boxes", "redaction", "pii redaction"]
# Add dependencies here
dependencies = ["gradio>=6.9.0,<7.0"]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.urls]
Repository = "https://github.com/seanpedrick-case/gradio_image_annotator.git"
Issues = "https://github.com/seanpedrick-case/gradio_image_annotator/issues"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_image_annotation_redaction/templates", "*.pyi", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "backend/gradio_image_annotation_redaction/templates", "/home/spedrickcase/.pyenv/versions/3.12.12/lib/python3.12/site-packages/gradio_image_annotation_redaction/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_image_annotation_redaction"]
